# iKalibr

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  build_thirdparty.sh  package.xml  readme.md
config/: cam-intri-pinhole-brown.yaml  cam-intri-pinhole-fisheye.yaml  ikalibr-config.yaml  imu-intri.yaml  spat_temp_priori.yaml
config/tool/: config-bag-merge.yaml  config-imu-intri-calib.yaml
data/real-world/: cam-gs-intri.yaml  cam-rs-intri.yaml
data/tum/: cam0-intri-pinhole-fisheye.yaml  cam1-intri-pinhole-fisheye.yaml
data/vector/: cam-left-intri-pinhole-brown.yaml  cam-right-intri-pinhole-brown.yaml  event-left-intri-pinhole-brown.yaml  event-right-intri-pinhole-brown.yaml
docs/appendix/: appendix.tex  orcidlink.sty  reference.bib
docs/details/: build_ikalibr.md  build_ikalibr_docker.md  config_template_note.md  dataset.md  lidar-type.md  news.md  sensor_type.md  tools.md  use_ikalibr.md  why_ikalibr.md
docs/img/: supported_sensors.drawio
docs/note/: doc.tex  reference.bib
exe/nofree/: learn.cpp
exe/solver/: main.cpp
exe/tool/: bag_merge.cpp  bag_topic_downsample.cpp  data_format_transformer.cpp  imgs_to_bag.cpp  imu_intri_calib.cpp  lidar_map_viewer.cpp  raw_inertial_to_bag.cpp
include/calib/: batch_opt_option.hpp  calib_data_manager.h  calib_param_manager.h  calib_solver.h  calib_solver_io.h  calib_solver_tpl.hpp  ceres_callback.h  estimator.h  estimator_tpl.hpp  spat_temp_priori.h  time_deriv.hpp
include/config/: configor.h
include/core/: colmap_data_io.h  ev_circle_tracking.h  event_preprocessing.h  event_trace_sac.h  feature_tracking.h  haste_data_io.h  lidar_odometer.h  optical_flow_trace.h  pts_association.h  radar_velocity_sac.h  rot_only_vo.h  rotation_estimator.h  scan_undistortion.h  tracked_event_feature.h  vision_only_sfm.h  visual_distortion.h  visual_pixel_dynamic.h  visual_reproj_association.h  visual_velocity_estimator.h  visual_velocity_sac.h
include/factor/: data_correspondence.h  ellipse_fitting.hpp  event_optical_flow_factor.hpp  hand_eye_rot_align_factor.hpp  imu_acce_factor.hpp  imu_gyro_factor.hpp  inertial_align_factor.hpp  lidar_inertial_align_factor.hpp  lin_scale_factor.hpp  line_2d_fitting.hpp  linear_knots_factor.hpp  norm_flow_pure_rot_factor.hpp  point_to_surfel_factor.hpp  ppp_trifocal_tensor_factor.hpp  ppp_trifocal_tensor_vel_factor.hpp  prior_extri_pos_factor.hpp  prior_extri_so3_factor.hpp  prior_time_offset_factor.hpp  radar_factor.hpp  radar_inertial_align_factor.hpp  radar_inertial_rot_align_factor.hpp  rgbd_inertial_align_factor.hpp  rgbd_velocity_factor.hpp  so3_factor.hpp  time_varying_circle_fitting.hpp  vel_visual_inertial_align_factor.hpp  visual_inertial_align_factor.hpp  visual_optical_flow_factor.hpp  visual_proj_factor.hpp  visual_reproj_factor.hpp  visual_velocity_depth_factor.hpp
include/nofree/: bag_merge.h  bag_merge.hpp  data_collect_demo.h  data_collect_demo.hpp  extract_intri.hpp  imu_intri_calib.h  imu_intri_calib.hpp  imu_intri_calib_factors.hpp  logo_svg.h  logo_svg.hpp  ufomap_learner.hpp
include/pclomp/: gicp_omp.hpp  ndt_omp.hpp  voxel_grid_covariance_omp.hpp
include/sensor/: camera.h  camera_data_loader.h  depth_data_loader.h  event.h  event_data_loader.h  imu.h  imu_data_loader.h  imu_intrinsic.hpp  lidar.h  lidar_data_loader.h  radar.h  radar_data_loader.h  rgbd.h  rgbd_intrinsic.hpp  sensor_model.h
include/solver/: batch_opt_option.hpp  calib_solver.h  calib_solver_io.h  calib_solver_tpl.hpp
include/util/: cereal_archive_helper.hpp  cereal_yaml.hpp  circlesgrid.h  cloud_define.hpp  enum_cast.hpp  status.hpp  tqdm.h  utils.h  utils.hpp  utils_tpl.hpp
include/viewer/: viewer.h  visual_ang_vel_drawer.h  visual_colorized_cloud_map.h  visual_gravity.h  visual_lidar_covisibility.h  visual_lin_vel_drawer.h
launch/nofree/: ikalibr-learn.launch
launch/solver/: ikalibr-prog.launch
launch/tool/: ikalibr-bag-merge.launch  ikalibr-bag-topic-downsample.launch  ikalibr-data-format-transformer.launch  ikalibr-imgs-to-bag.launch  ikalibr-imu-intri-calib.launch  ikalibr-lidar-map-viewer.launch  ikalibr-raw-inertial-to-bag.launch
model/: ikalibr.blend
msg/: AWR1843RadarScan.msg  AWR1843RadarScanCustom.msg  AinsteinRadarTarget.msg  AinsteinRadarTargetArray.msg  DVSEvent.msg  DVSEventArray.msg  LivoxCustomMsg.msg  LivoxCustomPoint.msg  PropheseeEvent.msg  PropheseeEventArray.msg  SbgImuData.msg  SbgImuStatus.msg
script/: event_local_planes.py  helper.py  hessian.py  plt_utils.py
src/calib/: calib_data_manager.cpp  calib_param_manager.cpp  calib_solver.cpp  calib_solver_bo_impl.cpp  calib_solver_common_impl.cpp  calib_solver_da_impl.cpp  calib_solver_impl.cpp  calib_solver_init_impl.cpp  calib_solver_init_prep_bo_impl.cpp  calib_solver_init_prep_ci_align_impl.cpp  calib_solver_init_prep_di_align_impl.cpp  calib_solver_init_prep_li_align_impl.cpp  calib_solver_init_prep_ri_align_impl.cpp  calib_solver_init_scale_spline_impl.cpp  calib_solver_init_sen_inertial_align_impl.cpp  calib_solver_init_so3_spline_impl.cpp  calib_solver_io.cpp  calib_solver_proc_impl.cpp  ceres_callback.cpp  estimator.cpp  spat_temp_priori.cpp
src/config/: configor.cpp
src/core/: colmap_data_io.cpp  ev_circle_tracking.cpp  event_preprocessing.cpp  event_trace_sac.cpp  feature_tracking.cpp  haste_data_io.cpp  lidar_odometer.cpp  optical_flow_trace.cpp  pts_association.cpp  radar_velocity_sac.cpp  rot_only_vo.cpp  rotation_estimator.cpp  scan_undistortion.cpp  tracked_event_feature.cpp  vision_only_sfm.cpp  visual_distortion.cpp  visual_pixel_dynamic.cpp  visual_reproj_association.cpp  visual_velocity_estimator.cpp  visual_velocity_sac.cpp
src/factor/: data_correspondence.cpp  factor_instantiation.cpp
src/nofree/: bag_merge.cpp  data_collect_demo.cpp  imu_intri_calib.cpp  logo_svg.cpp
src/sensor/: camera.cpp  camera_data_loader.cpp  depth_data_loader.cpp  event.cpp  event_data_loader.cpp  imu.cpp  imu_data_loader.cpp  lidar.cpp  lidar_data_loader.cpp  radar.cpp  radar_data_loader.cpp  rgbd.cpp  sensor_model.cpp
src/solver/: calib_solver_bo_impl.cpp  calib_solver_common_impl.cpp  (+17 more)
(+102 files in other folders)
